# TrajectoryCache

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SMOKE_TEST_REPORT.md  docker-compose.yml  matlab_simulation.m  pyproject.toml  pytest.ini  references_tc.bib  requirements.txt  run_50_seeds.py  run_alpha_0_5.py  run_alpha_0_8_raw.py  run_alpha_1.py  run_journal_eval.py  run_sweeps.py  setup.py  simpy_simulation.py  sumo_cache_sim.py  tc_paper.tex  tc_paper_elsevier.bbl  tc_paper_elsevier.tex
.github/workflows/: ci.yml  release.yml
configs/: simulation.yaml  sweep.yaml
deployment/k8s/: deployment.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md
experiments/results/: adaptive_experiments.json  artifact_isolation.json  config_ablation.json  edc_damping_tuning_freshseeds.json  edc_statistics.json  edc_sumo_10seed.json  edc_sumo_5seed.json  matched_tiers_535m.json  new_experiments.json  ngsim_signal_correlation.json  predictor_correlations.json  real_freeflow.json  sumo_multirsu_edc_10seed.json  sumo_urgency_diagnosis.json  synthetic_edc_10seed.json
experiments/results/alpha08/: multiseed_alpha0.8.json
experiments/results/density/: density_sweep.json
experiments/results/wsweep/: wsweep_results.json
paper/: tc_paper_elsevier.tex
papers/: tc_paper_elsevier.tex
scripts/: analyze_fidelity.py  compute_edc_stats.py  compute_stats.py  diagnose_sumo_urgency.py  generate_comparative_graphs.py  generate_figures.py  make_edc_figures.py  make_paper_figures.py  measure_ngsim_correlation.py  measure_predictor_correlations.py  run_adaptive_experiments.py  run_all_comparative_benchmarks.py  run_artifact_isolation.py  run_benchmark.py  run_config_ablation.py  run_deadline_metric.py  run_density_sweep.py  run_edc_sumo_grid.py  run_freeflow.py  run_matched_tiers.py  run_multiseed.py  run_new_experiments.py  run_real_ngsim.py  run_sumo_multirsu.py  run_sumo_multirsu_grid.py  run_sumo_validation.py  run_synthetic_edc.py  run_wsweep.py  smoke_test.py  sweep.py  test_spatial_predictors.py
scripts/adapters/: download_us101_freeflow.py  ngsim_adapter.py
src/trajectorycache/: __init__.py
src/trajectorycache/api/: __init__.py  app.py
src/trajectorycache/cache/: __init__.py  adaptive.py  base.py  baselines.py  expected_demand.py  learned.py  lru.py  trajectory.py
src/trajectorycache/content/: __init__.py  catalog.py
src/trajectorycache/evaluation/: __init__.py  benchmark.py  metrics.py
src/trajectorycache/simulation/: __init__.py  highway.py  runner.py
src/trajectorycache/utils/: __init__.py  config.py  logging.py  plotting.py
sumo/: highway.edg.xml  highway.net.xml  highway.nod.xml  highway535.edg.xml  highway535.net.xml  highway535.nod.xml  highway535b.edg.xml  highway535b.net.xml  highway535b.nod.xml
tests/: test_determinism.py  test_pipeline_integration.py
tests/integration/: test_api.py  test_simulation_integration.py
tests/unit/: test_baselines.py  test_expected_demand.py  test_simulation.py  test_trajectory_cache.py
