[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectorycache"
version = "0.1.0"
description = "Spatial-urgency-aware edge cache replacement for vehicular networks"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Adeel Ahmad" },
    { name = "Ali Akrma" },
    { name = "Touqeer Ali Syed" },
]
keywords = ["caching", "V2X", "MEC", "vehicular", "edge-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",          # TestClient transport
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "scipy>=1.10",
]
viz = [
    "matplotlib>=3.8",
    "pandas>=2.1",
    "seaborn>=0.13",
    "jupyter>=1.0",
]
all = ["trajectorycache[dev,viz]"]

[project.scripts]
tc-benchmark = "trajectorycache.evaluation.benchmark:run_benchmark"
tc-api       = "trajectorycache.api.app:run_api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
log_cli     = true
log_level   = "INFO"

[tool.coverage.run]
source   = ["src/trajectorycache"]
omit     = ["*/tests/*", "*/api/*"]

[tool.black]
line-length    = 95
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.10"
strict              = false
ignore_missing_imports = true
